# epub-optimizer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.build.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-dev.yml  docker.yml
src/epub_optimizer/: __init__.py  automation.py  core.py  epub.py  errors.py  models.py  style.py  web.py
src/epub_optimizer/static/: app.js  styles.css
src/epub_optimizer/templates/: index.html
tests/: test_automation.py  test_core.py  test_epub_paths.py  test_integration_optimize.py  test_web.py
